[gd_scene load_steps=3 format=2]

[ext_resource path="res://resources/runtime_data.tres" type="Resource" id=1]
[ext_resource path="res://Enemy/timers/enemy_type_timers.gd" type="Script" id=2]

[node name="TextTimerController" type="Node"]
script = ExtResource( 2 )
runtime_data = ExtResource( 1 )

[node name="PowerUpTimer" type="Timer" parent="."]
one_shot = true

[node name="DefenceTimer" type="Timer" parent="."]
one_shot = true

[node name="AttackOneTimer" type="Timer" parent="."]
one_shot = true

[node name="AttackTwoTimer" type="Timer" parent="."]
one_shot = true

[node name="AttackThreeTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="PowerUpTimer" to="." method="_on_PowerUpTimer_timeout"]
[connection signal="timeout" from="DefenceTimer" to="." method="_on_DefenceTimer_timeout"]
[connection signal="timeout" from="AttackOneTimer" to="." method="_on_AttackOneTimer_timeout"]
[connection signal="timeout" from="AttackTwoTimer" to="." method="_on_AttackTwoTimer_timeout"]
[connection signal="timeout" from="AttackThreeTimer" to="." method="_on_AttackThreeTimer_timeout"]
